deployment/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  onlinebookstore
  namespace: dev-swt
  labels:
    name:  onlinestore
spec:
  replicas: 1
  selector:
   matchLabels:
    name:  onlinestore
  template:
    metadata:
      labels:
        name: onlinestore
    spec:
      containers:
      - name:  onlinebookstoreapp
        image: srinivasulukokkinti/onlinebookstore23:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 20m
            memory: "55M"
          limits:
            cpu: 30m
            memory: "100M"
      imagePullSecrets:
         - name:  onlinebookstore
